test/classes/delete-free/error-owned-record.good
error-owned-record.chpl:4: error: cannot use non-class type 'R' with memory management specifiers
